[package]
authors = ["Steven Ferrer <steven.r.ferrer@gmail.com>"]
description = "A key-value store"
edition = "2021"
name = "kvs"
version = "0.1.0"

[lib]
test = false

[[bin]]
doctest = false
name = "kvs"
test = false

[dependencies]
clap = {version = "3.2.17", features = ["derive", "cargo"]}

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
walkdir = "2.3.2"
